--- a/searchimprovements/documentsearch/documentsearch.css
+++ b/searchimprovements/documentsearch/documentsearch.css
@@ -53,9 +53,9 @@ header .suggestions-result {
   width: calc(100% - 11.5em);
 	max-height: 500px;
 	overflow: auto;
-	box-shadow: none;
 	border-bottom-left-radius: 0;
 	border-bottom-right-radius: 0;
+	border-left: none;
 	padding-bottom: 10px;
 }
 
@@ -98,11 +98,25 @@ header .suggestions-result {
 	max-width: 35px;
 }
 
+@media (min-width: 1441px) and (max-width: 2000px) {
+	header .suggestions-result .col-xl-1 {
+		flex: 0 0 6.333333%;
+		max-width: 6.333333%;
+	}
+}
 
-	@media (min-width: 2550px) {
+@media (min-width: 2001px) and (max-width: 2559px) {
+	header .suggestions-result .col-xl-1 {
+		flex: 0 0 5.333333%;
+		max-width: 5.333333%;
+	}
+}
+
+
+	@media (min-width: 2560px) {
 		
 		.keywordsuggestion {
-			padding: 0 60px;
+			padding: 0 30px;
 		}
 
 		header .suggestions-result .col-xl-2 {
@@ -110,6 +124,11 @@ header .suggestions-result {
 			max-width: 8.333333%;
 			display: flex;
 			justify-content: flex-start;
+		}
+		
+		header .suggestions-result .col-xl-1 {
+			flex: 0 0 4.333333%;
+			max-width: 4.333333%;
 		} 
 	}
 
@@ -166,3 +185,4 @@ header .suggestions-result {
 		}
 
   }
+	
