--- a/searchimprovements/documentsearch/documentsearch.css
+++ b/searchimprovements/documentsearch/documentsearch.css
@@ -58,6 +58,8 @@ header .suggestions-result div a:hover {
   margin: 0;
 }
 
+
+
 header .suggestions-result {
   left: 140px;
   width: calc(100% - 11.5em);
@@ -66,6 +68,10 @@ header .suggestions-result {
 	border-bottom-left-radius: 0;
 	border-bottom-right-radius: 0;
 	padding-bottom: 10px;
+}
+
+.keywordsuggestion .fa-2xl {
+	line-height: 1.5em;
 }
 
 .documentSearchBtn[aria-expanded="true"]{
@@ -132,6 +138,15 @@ header .suggestions-result {
 			flex: 0 0 4.333333%;
 			max-width: 4.333333%;
 		} 
+
+		.keywordsuggestion img {
+			max-width: 50px;
+		}
+
+		.keywordsuggestion .fa-2xl {
+			font-size: 2.5em;
+			line-height: 1.5em;
+		}
 	}
 
 
@@ -144,12 +159,6 @@ header .suggestions-result {
 			max-width: 50px;
 		}
   }
-
-	@media (min-width: 900px) {
-		.scanner-picker {
-			display: none;
-		}
-	}
 
 	@media (max-width: 900px) {
 		header .suggestions-result {
