--- a/digitalvouchers/style.css
+++ b/digitalvouchers/style.css
@@ -162,6 +162,8 @@ digital-voucher .btn.digitalVoucher, digital-voucher {
   padding: 10px;
 }
 
+
+
 @media (max-width: 1200px) {
 
   .digitalVouchers digital-voucher, .digitalVouchersApplied digital-voucher-applied  {
@@ -179,6 +181,11 @@ digital-voucher .btn.digitalVoucher, digital-voucher {
 }
 
 @media (max-width: 768px) {
+
+  digital-vouchers-panel {
+    font-size: 100%;
+    max-width: 100vw;
+  }
 
   .digitalVouchers digital-voucher, .digitalVouchersApplied, digital-voucher {
     -webkit-box-flex: 0;
