--- a/digitalvouchers/style.css
+++ b/digitalvouchers/style.css
@@ -38,6 +38,14 @@ digital-vouchers-panel .top {
   justify-content: space-between;
 }
 
+digital-vouchers-panel h3 {
+  font-size: 1.5rem;
+}
+
+digital-vouchers-panel h4 {
+  font-size: 1.25rem;
+}
+
 .digitalVouchers digital-voucher, .digitalVouchersApplied digital-voucher-applied  {
   border-radius: 10px;
   margin: 20px 0px;
