--- a/home-branch-range/style.css
+++ b/home-branch-range/style.css
@@ -73,7 +73,7 @@
 }
 
 header.shopping-header .greeting {
-  width: 270px;
+  width: 235px;
 
 }
 
@@ -143,7 +143,7 @@ header.shopping-header .greeting {
 }
 
 header#shopping-header-desktop #search-bar #mini-trolley .btn {
-  height: 100% !important;
+  height: 100%;
 }
 
 
