--- a/digitalvouchers/style.css
+++ b/digitalvouchers/style.css
@@ -181,12 +181,10 @@ digital-voucher .btn.digitalVoucher, digital-voucher {
   padding: 1px 3px;
 }
 
-.digitalVouchersApplied {
+.digitalVouchersApplied, .digitalVouchersAvailable, .digitalVouchersAppliedAvailable {
   border-radius: 10px;
   padding: 10px;
 }
-
-
 
 @media (max-width: 1200px) {
 
