--- a/digitalvouchers/style.css
+++ b/digitalvouchers/style.css
@@ -60,6 +60,7 @@ digital-voucher .card, digital-vouchers-applied .card, digital-vouchers-availabl
   border-radius: 10px;
   display: flex;
   flex-direction: column;
+  box-shadow: 0px 0px 2px 2px #d3d3d3;
 }
 
 
@@ -122,13 +123,13 @@ digital-voucher .card .cutaway, digital-vouchers-applied .card .cutaway, digital
 }
 
 digital-voucher .card .cutaway.left, digital-vouchers-applied .card .cutaway.left, digital-vouchers-available .card .cutaway.left, digital-vouchers-applied-available .card .cutaway.left {
-  left: -1%;
-  border-right: 1px solid rgba(0,0,0,.125);
+  left: -2%;
+  border-right: 4px solid #d3d3d3;
 }
 
 digital-voucher .card .cutaway.right, digital-vouchers-applied .card .cutaway.right, digital-vouchers-available .card .cutaway.right, digital-vouchers-applied-available .card .cutaway.right {
-  right: -1%;
-  border-left: 1px solid rgba(0,0,0,.125);
+  right: -2%;
+  border-left: 4px solid #d3d3d3;
 }
   
 
@@ -186,6 +187,8 @@ digital-voucher .btn.digitalVoucher, digital-voucher {
   padding: 10px;
 }
 
+
+
 @media (max-width: 1200px) {
 
   .digitalVouchers digital-voucher, .digitalVouchersApplied digital-vouchers-applied, .digitalVouchersAvailable digital-vouchers-available, .digitalVouchersAppliedAvailable digital-vouchers-applied-available  {
@@ -220,12 +223,10 @@ digital-voucher .btn.digitalVoucher, digital-voucher {
 
   digital-voucher .card .cutaway.left {
     left: -2%;
-    border-right: 1px solid rgba(0,0,0,.125);
   }
   
   digital-voucher .card .cutaway.right {
     right: -2%;
-    border-left: 1px solid rgba(0,0,0,.125);
   }
 
 }
