--- a/home-branch-range/style.css
+++ b/home-branch-range/style.css
@@ -15,8 +15,18 @@
   margin-right: 0em !important;
 }
 
-#shopping-header-desktop .changeCcBranchBtn.small {
+header.shopping-header #search-bar {
+  align-items: normal;
+}
+
+#shopping-header-desktop #search-bar #logo {
+  justify-content: end !important;
+}
+
+header.shopping-header #search-bar .btn.changeCcBranchBtn.small {
   width: 150px !important;
+  height: 100%;
+  align-items: normal !important;
 }
 
 #shopping-header-desktop .changeCcBranchBtn {
